src/index.css
body,html {
  padding: 0;
  margin: 0;
  width: 100%;
  overflow-x: hidden;
  font-family: 'Montserrat', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1,h2,h3,h4,p,a{
  margin:0;
  padding:0;
  font-family: 'Montserrat', sans-serif;
}

p{
  font-size: 0.875rem;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

